--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,17 @@
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
-ul {
-  list-style-type: none;
-  overflow: hidden;
-}
-li {
-  display: inline;
-}
-a {
-  display: block;
-  text-decoration: none;
-  color: #000;
-}
-.left {
-  float: left;
-  padding: 10px 10px;
-}
-.right {
-  float: right;
-  padding: 10px 10px;
-}
-img {
-  margin: auto auto;
-  display: block;
-}
 div {
+  text-align: center;
 }
-input {
-  margin: auto auto;
-  display: block;
+#img-box {
+  margin-top: 47px;
+  height: 233px;
+  padding-top: 109px;
 }
-form {
-  display: block;
-  position: absolute;
-  top: 300px;
-  padding: 40px 40px;
-  margin: 40px;
-  height: 52px;
-  width: 1280px;
-  margin-top: 0px;
+#logo {
+  height: 92px;
+  width: 272px;
+}
+#search {
+  height: 118px;
+  width: 60vw;
+  text-align: center;
 }
