--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,27 @@
+body {
+  font-size: small;
+  color: #222;
+}
+#viewport {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  min-height: 100%;
+}
 div {
   text-align: center;
+}
+ul {
+  list-style-type: none;
+}
+li {
+  display: inline;
+}
+.nav {
+  display: block;
+}
+#l-nav {
+  float: left;
 }
 #main {
   margin-top: 47px;
@@ -10,7 +32,7 @@ div {
   height: 92px;
   width: 272px;
 }
-#search {
+#s-form {
   margin-top: 0;
   top: 269px;
   position: absolute;
@@ -19,6 +41,9 @@ div {
   min-width: 100vw;
   text-align: center;
   width: 100%;
+}
+#search {
+  margin-top: 15px;
 }
 #bar {
   border: 1px solid #c0c0c0;
@@ -29,3 +54,49 @@ div {
   margin: 0px;
   box-sizing: border-box;
   outline: none;
+  cursor: text;
+}
+/* #gs {
+  background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
+  background-color: #f2f2f2;
+  margin: 11px 4px;
+  padding: 0px 16px;
+  border: 1px solid;
+  color: #5f6368;
+  font-family: arial, sans-serif;
+  border-radius: 4px;
+  min-width: 54px;
+  height: 36px;
+} */
+/* #ifl {
+  background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
+  background-color: #f2f2f2;
+  margin: 11px 4px;
+  padding: 0px 16px;
+  border: 1px;
+  min-width: 54px;
+  height: 36px;
+  text-align: center;
+} */
+input[type="submit"] {
+  background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
+  background-color: #f2f2f2;
+  margin: 11px 4px;
+  padding: 0px 16px;
+  border: 1px solid;
+  color: #5f6368;
+  font-family: arial, sans-serif;
+  font-size: 14px;
+  line-height: 36px;
+  border-radius: 4px;
+  min-width: 54px;
+  height: 36px;
+  cursor: pointer;
+}
+input[type="submit"]:hover {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  background-image: -webkit-linear-gradient(top, #f8f8f8, #f1f1f1);
+  background-color: f8f8f8;
+  border: 1px solid c6c6c6;
+  color: #222;
+}
