--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,21 @@ div {
 ul {
   list-style-type: none;
 }
+li a {
+  text-decoration: none;
+}
 li {
-  display: inline;
+  /* display: inline; */
+  text-align: center;
+}
+.l-nav {
+  display: block;
+  padding: 8px;
 }
 .nav {
   display: block;
+  margin: 0;
+  padding: 0;
 }
 #l-nav {
   float: left;
