fixed search-bar location, END OF PROJECT

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ a:hover {
   width: 460px;
   height: 39px;
   padding: 12px 30px;
-  margin: 0px;
+  margin-left: 45px;
   box-sizing: border-box;
   outline: none;
   cursor: text;
